--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
   /* Estilos para el encabezado */
   .navbar {
     margin-bottom: 20px;
-    
   }
   
   /* Estilos para las secciones */
@@ -41,7 +40,10 @@ body {
     height: 170px; /* Para mantener la proporción */
     margin-bottom: 20px;
   }
-
+  .same-size-img:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s;
+  }
   .navbar-nav .nav-link:hover {
     color: #007bff;
   }
@@ -88,4 +90,7 @@ body {
     padding: 10px;
     background-color: #f8f9fa;
   }
-  
+  .noticia-titulo:hover {
+    color: red;
+    text-decoration: none;
+}
